Update Camel and Spring Boot versions