@@ -9,11 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>3.4.7</spring-boot.version>
-        <camel.version>4.10.6</camel.version>
+        <spring-boot.version>3.5.12</spring-boot.version>
+        <camel.version>4.18.2</camel.version>
     </properties>
 
     <dependencyManagement>
@@ -64,6 +64,12 @@
             <artifactId>camel-jolt-starter</artifactId>
         </dependency>
 
+        <!-- Languages -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jsonpath-starter</artifactId>
+        </dependency>
+
         <!-- Data Formats -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
@@ -72,12 +78,6 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-snakeyaml-starter</artifactId>
-        </dependency>
-
-        <!-- Languages -->
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-jsonpath-starter</artifactId>
         </dependency>
 
         <!-- Testing -->
@@ -92,5 +92,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
